Flesh out content for curry page

--- a/pages/Curry_Chicken.html
+++ b/pages/Curry_Chicken.html
@@ -8,6 +8,20 @@
 
 
     <body>
-    
+    <h1>Curry Chicken Recipe</h1>
+    <img src="/images/unnamed.jpg">
+    <p>Chicken with a mix of local Jamican Spices usually served with whit rice or rice and beans</p>
+    <h2>Ingridents</h2>
+    <ul>
+        <li>Chicken</li>
+        <li>Onions, Green Oninions, Bell Peppers , and tomatoes . (Diced)</li>
+        <li>Garlic, ginger, cilantro and fresh thyme, all chopped. </li>
+        <li>Jalapeño</li>
+        <li>Spices</li>
+        <li>Potatoes</li>
+        <li>Carrots</li>
+        <li>Salt</li>
+        <li>Olive oil</li>
+    </ul>
     </body>
 </html>
