add copied template to all recipe pages to fill out and change later

--- a/pages/Curry_Chicken.html
+++ b/pages/Curry_Chicken.html
@@ -23,5 +23,15 @@
         <li>Salt</li>
         <li>Olive oil</li>
     </ul>
+    <h2><strong>Steps:</strong></h2>
+    <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
     </body>
 </html>
