Add unique content pertaining to each recipe and further flesh the pages out

--- a/pages/Jerk_Chicken.html
+++ b/pages/Jerk_Chicken.html
@@ -9,19 +9,23 @@
 
     <body>
     <h1>Curry Chicken Recipe</h1>
-    <img src="/images/unnamed.jpg">
+    <img src="/images/Jerk-Chicken-Copy.jpg">
     <p>Chicken with a mix of local Jamican Spices usually served with whit rice or rice and beans</p>
     <h2>Ingridents</h2>
     <ul>
-        <li>Chicken</li>
-        <li>Onions, Green Oninions, Bell Peppers , and tomatoes . (Diced)</li>
-        <li>Garlic, ginger, cilantro and fresh thyme, all chopped. </li>
-        <li>Jalapeño</li>
-        <li>Spices</li>
-        <li>Potatoes</li>
-        <li>Carrots</li>
-        <li>Salt</li>
-        <li>Olive oil</li>
+        <li>1 medium onion, coarsely chopped</li>
+        <li>3 medium scallions, chopped </li>
+        <li>2 Scotch bonnet chiles, chopped</li>
+        <li>2 garlic cloves, chopped</li>
+        <li>1 tablespoon five-spice powder</li>
+        <li>1 tablespoon allspice berries, coarsely ground</li>
+        <li>1 tablespoon coarsely ground pepper</li>
+        <li>1 teaspoon dried thyme, crumbled/li>
+        <li>1 teaspoon freshly grated nutmeg</li>
+        <li>1 teaspoon salt</li>
+        <li>1/2 cup soy sauce</li>
+        <li>1 tablespoon vegetable oil</li>
+        <li>Two 3 1/2- to 4-pound chickens, quartered</li>
     </ul>
     <h2><strong>Steps:</strong></h2>
     <ol>
