--- a/pages/Oxtail.html
+++ b/pages/Oxtail.html
@@ -3,35 +3,44 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Curry Chicken Recipe from home</title>
+        <title>Oxtail Recipe from home</title>
     </head>
 
 
     <body>
-    <h1>Curry Chicken Recipe</h1>
-    <img src="/images/unnamed.jpg">
+    <h1>Oxtail Recipe</h1>
+    <img src="/images/oxtail.jpg">
     <p>Chicken with a mix of local Jamican Spices usually served with whit rice or rice and beans</p>
     <h2>Ingridents</h2>
     <ul>
-        <li>Chicken</li>
-        <li>Onions, Green Oninions, Bell Peppers , and tomatoes . (Diced)</li>
-        <li>Garlic, ginger, cilantro and fresh thyme, all chopped. </li>
-        <li>Jalapeño</li>
-        <li>Spices</li>
-        <li>Potatoes</li>
-        <li>Carrots</li>
-        <li>Salt</li>
-        <li>Olive oil</li>
+        <li>3 pounds (1.3 kg) oxtails with separated joints</li>
+        <li>Salt and pepper</li>
+        <li>Extra virgin olive oil</li>
+        <li>1 medium yellow onion, chopped</li>
+        <li>1 celery rib, chopped</li>
+        <li>1 large carrot, chopped</li>
+        <li>2 cups (475 ml) stock (chicken or beef)</li>
+        <li>2 cups (475 ml) of red wine</li>
+        <li>3 whole cloves garlic, peel still on</li>
+        <li>One bay leaf</li>
+        <li>Pinch of thyme</li>
+        <li>Parsley</li>
+        <li>2 carrots, cut into 1-inch segments, large pieces also cut lengthwise
+        </li>
+        <li>2 parsnips, cut into 1-inch segments, large pieces also cut lengthwise</li>
+        <li>2 turnips or rutabagas, cut into 1-inch pieces</li>
+        <li>Extra virgin olive oil</li>
+        <li>Salt and pepper</li>
     </ul>
     <h2><strong>Steps:</strong></h2>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Brown the Oxtail</li>
+        <li>Saute Onions,Carrots, celery</li>
+        <li>Add oxtails , garlic,bay leaf, thyme,Salt, stock, wine, then simmer</li>
+        <li>Roast root vegetables</li>
+        <li>Skim fat</li>
+        <li>Strain solids from cooking liquid, reduce liquids</li>
+        <li>Add back oxtails , roasted vegetables</li>
     </ol>
     </body>
 </html>
