Display recipe steps for each unique recipe

--- a/pages/Curry_Chicken.html
+++ b/pages/Curry_Chicken.html
@@ -25,13 +25,12 @@
     </ul>
     <h2><strong>Steps:</strong></h2>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Toast spices</li>
+        <li>Chop & season chicken breasts</li>
+        <li>Cover chicken with coconut milk to marinate a few minutes</li>
+        <li>Chop & cook onion, jalapeno, and ginger/garlic</li>
+        <li>Add lemon juice, add chicken in coconut milk, add broth</li>
+        <li>Thicken sauce & simmer. Then EAT!</li>
     </ol>
     </body>
 </html>
