--- a/pages/Jerk_Chicken.html
+++ b/pages/Jerk_Chicken.html
@@ -29,13 +29,10 @@
     </ul>
     <h2><strong>Steps:</strong></h2>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Place chicken pieces in a gallon size resealable bag.</li>
+        <li>Make marinade</li>
+        <li>Pour marinade over chicken:</li>
+        <li>Allow marinating time</li>
     </ol>
     </body>
 </html>
